--- a/src/cremalab/assets/styles/04-modules/_site_nav.scss
+++ b/src/cremalab/assets/styles/04-modules/_site_nav.scss
@@ -155,3 +155,15 @@
     }
   }
 }
+
+
+
+@media screen and (max-width:814px){
+  .Cremalab__Nav-navItems{
+    font-size:15px;
+    li{
+      padding-right:20px;
+    }
+  }
+}
+
